--- a/README
+++ b/README
@@ -7,23 +7,23 @@ accessing hundreds of informations about the file, like creation date or
 Exif informations of an image.
 
 Runtime requirements:
-  cygwin-1.7.0-61
-  libexiv2_5-0.18.1-1
-  libgcc1-4.3.2-2
-  libkdecore5-4.2.4-1
-  libQtCore4-4.5.2-1
-  libQtGui4-4.5.2-1
-  libstdc++6-4.3.2-2
-  libtag1-1.5-10
+  cygwin-1.7.1-1
+  libexiv2_5-0.18.2-1
+  libgcc1-4.3.4-3
+  libkdecore5-4.3.4-1
+  libQtCore4-4.5.3-2
+  libQtGui4-4.5.3-2
+  libstdc++6-4.3.4-3
+  libtag1-1.6-1
 
 Build requirements:
 (besides corresponding -devel packages)
   automoc4-0.9.88-10
   binutils-2.19.51-1
-  cmake-2.6.4-10
-  cygport-0.9.9-1
-  gcc4-core-4.3.2-2
-  gcc4-g++-4.3.2-2
+  cmake-2.8.0-11
+  cygport-0.9.80-1
+  gcc4-core-4.3.4-3
+  gcc4-g++-4.3.4-3
   make-3.81-2
   pkg-config-0.23b-10
 
@@ -36,24 +36,22 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack krename-4.0.0-X-src.tar.bz2
+  unpack krename-4.0.3-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./krename-4.0.0-X.cygport all
+  cygport ./krename-4.0.3-X.cygport all
 
 This will create:
-  /usr/src/krename-4.0.0-X-src.tar.bz2
-  /usr/src/krename-4.0.0-X.tar.bz2
+  /usr/src/krename-4.0.3-X-src.tar.bz2
+  /usr/src/krename-4.0.3-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary package:
-
-
-------------------
-
 Port Notes:
+
+----- version 4.0.3-1 -----
+Version bump.
 
 ----- version 4.0.0-1 -----
 Initial release for Cygwin 1.7.
